Fixed details alignment

--- a/client-server/src/app/pages/restaurant-page/restaurant-page.component.scss
+++ b/client-server/src/app/pages/restaurant-page/restaurant-page.component.scss
@@ -341,7 +341,7 @@ ngb-alert {
   margin: 0;
   font-weight: 500;
   color: $navigation-color;
-  padding-left: 1rem;
+  //padding-left: 1rem;
   padding-bottom: 0.1rem;
 }
 
